--- a/docs/pages/desktop-access/troubleshooting.mdx
+++ b/docs/pages/desktop-access/troubleshooting.mdx
@@ -59,6 +59,14 @@ If that doesn't help, log into the target host directly, open PowerShell and
 run `gpupdate.exe /force`. This forces a Group Policy sync and should pick up
 the new CA.
 
+### Smart Card Not Supported
+
+You connect to a Windows host from the Teleport UI, land on the Windows login
+screen, and see an error message: **"Signing in wiht a smart card isn't
+supported for your account."**
+
+**Solution:** TODO(zmb3)
+
 ## New session "hangs"
 
 ### Host Unreachable
@@ -149,18 +157,25 @@ that runs `windows_desktop_service`.
 
 ### Cannot Initialize LDAP over TLS
 
-Teleport fails to start with an error similar to:
+Teleport fails to connect to LDAP on startup. You may see errors similar to:
 
 ```text
 LDAP Result Code 52 "Unavailable": 00000000: LdapErr: DSID-0C090F78, comment: Error initializing SSL/TLS, data 0, v2580\x00
 ```
 
-**Solution:** Install Active Directory Certificate Services
+or
 
-This means that you do not have Active Directory Certificate Services (AD CS)
-installed in your domain. AD CS provides the certificate for TLS connections to
-LDAP and Teleport refuses to authenticate to LDAP over an insecure connection.
+```text
+connecting to LDAP server: unable to read LDAP response packet: read tcp 172.18.0.5:35970->;172.18.0.4:636: read: connection reset by peer
+```
 
-You must [install AD
-CS](https://docs.microsoft.com/en-us/windows-server/networking/core-network-guide/cncg/server-certs/install-the-certification-authority)
-on one of the Domain Controllers and reboot it.
+**Solution:**  Enable LDAPS
+
+This means you do not have an LDAP certificate installed on your LDAP servers.
+You can resolve this by
+[installing Active Directory Certificate Services](https://docs.microsoft.com/en-us/windows-server/networking/core-network-guide/cncg/server-certs/install-the-certification-authority)
+(AD CS) or
+[importing](https://docs.microsoft.com/en-us/troubleshoot/windows-server/identity/enable-ldap-over-ssl-3rd-certification-authority)
+your own third party certificate. Note that Active Directory is
+[extremely picky](https://docs.microsoft.com/en-us/troubleshoot/windows-server/identity/enable-ldap-over-ssl-3rd-certification-authority#requirements-for-an-ldaps-certificate)
+so take care to generate your certificates correctly.
